fix(gantt): move tasks to prevent overlapping dependency arrows

--- a/packages/default/scss/gantt/_layout.scss
+++ b/packages/default/scss/gantt/_layout.scss
@@ -196,7 +196,7 @@
         td::after { content: "\a0"; }
     }
     .k-task-wrap {
-        margin: 0 -1.5em;
+        margin: 0 -21px;
         padding: 5px 21px;
         display: inline-flex;
         flex-direction: row;
